REGRESSION(r235408): GTK bots exiting early https://bugs.webkit.org/show_bug.cgi?id=189063

Reviewed by Michael Catanzaro.

WebKitTestRunner was running the world leak checks even when run without --world-leaks,
causing GTK bot timeouts. So guard updateLiveDocumentsAfterTest(), checkForWorldLeaks()
and findAndDumpWorldLeaks() with m_checkForWorldLeaks checks, and in
TestController::handleControlCommand() print a message if the control script sends the
"#CHECK FOR WORLD LEAKS" command if WTR was not run with --world-leaks.

I tested that running with --world-leaks still works.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetStateToConsistentValues):
(WTR::TestController::updateLiveDocumentsAfterTest):
(WTR::TestController::checkForWorldLeaks):
(WTR::TestController::findAndDumpWorldLeaks):
(WTR::TestController::handleControlCommand):
(WTR::TestController::run):


Canonical link: https://commits.webkit.org/204282@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235646 268f45cc-cd09-0410-ab3c-d52691b4dbfc